# JobPipe

./: .env.example  .gitignore  .mcp.example.json  AGENTS.md  APPS_SCRIPT_CHANGES.md  BOUNDARY_MAP.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  COMPANION_REVISIONS.json  CONTRIBUTING.md  DASHBOARD_SPEC.md  DEPENDENCY_POLICY.md  LICENSE  MASTER_PLAN.md  OSS_SCOPE.md  PRODUCT.md  PRODUCT_VISION.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  WHO_AM_I.md  compile_check.py  docker-compose.gitnexus.yml  go.ps1  profile_pack.example.md  pyproject.toml  repomix.config.json  requirements.txt  run_detailed_report.cmd  run_reports.ps1
.claude/: settings.json  settings.local.example.json  settings.local.json
.codex/: config.toml
apps_script/: NAV_import_main.gs
calibration/: 2026-04-24_nFULL.json  2026-04-24_nFULL.md  2026-04-24_nFULL_raw.jsonl
configs/: application_pack_prompt.md  pipeline.v1.yaml
docs/: agent-codebase-tools.md  ai-playbook.md  application-lifecycle-contract.md  application-workspace-hub.md  apply-workbench-contract.md  architecture  architecture-plan.md  architecture.md  artifacts  artifacts.md  authoring-quality-spec.md  cli-cheatsheet.md  cli.md  configuration  configuration.md  current-state.json  dashboard.md  decision-model.md  decisions.md  deprecation-map.md  github-project-defaults.md  gmail_filter_spec.md  jobdesk-integration-plan.md  jobsane-north-star.md  jobsane-rolling-plan.md  live-paths.md  minimum-profile-fields.md  module-ownership.md  mvp-task-plan.md  orchestrator-git-workflow.md  persistence-hotspot-inventory.md  persistence-seam-contracts.md  public-loop-test-howto.md  source-event-contract.md  status-reconciliation-policy.md  supabase-nav-intake-adapter.md  trigger-policy.md  vision.md  windows-code-intelligence.md
jobpipe/: __init__.py
jobpipe_crewai/: author.py  crew.py  prompts.py
profile/: README.md  constraints.md.example  motivation.md.example  resume.json.example
reports/: apply_template.html  dashboard_template.html
specs/: agentic-jobpilot-salvage-audit-2026-04-19.md  ai-document-authoring-mvp-workflow-2026-04-21.md  ai-toolchain-setup-2026-04-22.md  architecture-boundaries.md  authoring-data-schema-2026-04-22.md  candidate-narrative-model.md  canonical-data-model.md  capability-gap-analysis.md  controlled-cv-tailoring.md  current-change  (+15 more)
(+286 files in other folders)
