[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-jobpilot"
version = "0.1.0"
description = "AI-powered job triage and scoring pipeline for the Norwegian job market"
requires-python = ">=3.11"

dependencies = [
    # Core pipeline
    "openai-agents>=0.6.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    # Application pack stage (deepagents — installed as editable from local fork)
    # "deepagents>=0.5.2",   # uncomment if switching to PyPI instead of local editable
    # Semantic pre-filter
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
    # HTTP / parsing
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jobpipe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
