[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpipe"
version = "0.1.0"
description = "Local-first data-and-reasoning layer for job search"
requires-python = ">=3.11"

dependencies = [
    # Core pipeline
    "openai-agents>=0.6.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    # Application pack stage (deepagents — installed as editable from local fork)
    # "deepagents>=0.5.2",   # uncomment if switching to PyPI instead of local editable
    # Semantic pre-filter
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
    # HTTP / parsing
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-docx>=1.1.2",
    # Gmail connectors
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.0.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
jobpipe = "jobpipe.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobpipe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
